--- a/src/components/board/index.css
+++ b/src/components/board/index.css
@@ -6,6 +6,7 @@
     overflow-x: auto;
     height: calc(100vh - 60px);
     align-items: flex-start;
+    background-color: #dae2e3;
   }
   
   .board::-webkit-scrollbar {
