--- a/src/components/card/index.css
+++ b/src/components/card/index.css
@@ -1,5 +1,5 @@
 .card {
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     border-radius: 8px;
     padding: 12px;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
@@ -19,7 +19,7 @@
   }
  
   .ticket-id {
-    color: #6b6f76;
+    color: #545557;
     font-size: 14px;
   }
 
@@ -37,3 +37,4 @@
     height: 24px;
     border-radius: 50%;
   }
+  
