--- a/src/components/card/index.css
+++ b/src/components/card/index.css
@@ -37,4 +37,39 @@
     height: 24px;
     border-radius: 50%;
   }
+  .avatar-container {
+    position: relative;
+    display: inline-block;
+  }
   
+  .avatar-wrapper {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    overflow: hidden;
+  }
+  
+  .avatar-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .status-indicator {
+    position: absolute;
+    bottom: -10px;
+    right: 0;
+    width: 7px;
+    height: 7px;
+    border: 1px solid white;
+    border-radius: 50%;
+    transform: translate(25%, 25%);
+  }
+  
+  .status-indicator.online {
+    background-color: #1add62; /* green-500 */
+  }
+  
+  .status-indicator.offline {
+    background-color: #9ca3af; /* gray-400 */
+  }
