--- a/src/components/card/index.css
+++ b/src/components/card/index.css
@@ -1,3 +1,4 @@
+
 .card {
     background-color: rgb(255, 255, 255);
     border-radius: 8px;
@@ -10,22 +11,48 @@
     justify-content: space-between;
     margin-bottom: 8px;
   }
-  .card-title{
+  
+  .card-title {
     display: flex;
     gap: 6px;
+    margin-bottom: 12px;
   }
-  .status-icon{
-    align-self: center;
+  
+  .status-icon {
+    margin-top: 4px;
+    font-size: 16px;
+    line-height: 1;
+    display: inline-block;
   }
- 
+  
   .ticket-id {
     color: #545557;
     font-size: 14px;
+    padding: 2px 8px;
+    border-radius: 4px;
   }
-
-  .card-footer{
+  
+  .card-footer {
     display: flex;
-    gap: 10px;
+    align-items: center;
+    gap: 8px;  
+  }
+  
+  .card-footer > div:first-child {
+    border: 1px solid #e6e6e6;
+    padding: 2px 8px;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+  }
+  
+  .card-footer > div:last-child {
+    border: 1px solid #e6e6e6;
+    padding: 2px 8px;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    gap: 4px;
   }
   
   .user-avatar {
@@ -37,39 +64,9 @@
     height: 24px;
     border-radius: 50%;
   }
-  .avatar-container {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .avatar-wrapper {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    overflow: hidden;
-  }
-  
-  .avatar-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  .status-indicator {
-    position: absolute;
-    bottom: -10px;
-    right: 0;
-    width: 7px;
-    height: 7px;
-    border: 1px solid white;
-    border-radius: 50%;
-    transform: translate(25%, 25%);
-  }
-  
-  .status-indicator.online {
-    background-color: #1add62; /* green-500 */
-  }
-  
-  .status-indicator.offline {
-    background-color: #9ca3af; /* gray-400 */
+
+  .ticket-title{
+    margin: 0;
+    align-items: flex-start;
+    
   }
