--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,8 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
+  width: 100vw;
   font-size: 1.2rem;
   color: #333;
+  font-size: xx-large;
 }
